<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addCreditsFragment"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/wallet"
        app:showAsAction="always" />
    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/notifications"
        app:actionLayout="@layout/cart_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/myBidsListFragment"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/my_bids"
        app:showAsAction="never" />
    <item
        android:id="@+id/transactionFragment"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/transactions"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>