<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.graphics.drawable.Drawable" />

        <import type="android.graphics.Color" />

        <import type="com.example.playludo.utils.AppConstant" />

        <variable
            name="bidModel"
            type="com.example.playludo.models.BidModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnAccept"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:context=".fragments.BidDetailsFragment">


                <ImageView
                    android:visibility="visible"
                    android:id="@+id/imageView3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ludo_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/bid_amount"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                <TextView
                    android:id="@+id/tvBidingAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />


                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/accepted_by"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="@{bidModel.bidAccepterName==null?View.GONE:View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvBidingAmount" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/bidder_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView25" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@{bidModel.bidAccepterName}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="@{bidModel.bidAccepterName==null?View.GONE:View.VISIBLE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView25" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@{bidModel.name}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/bid_status"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView9"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@{bidModel.bidStatus?`Close`:`Open`}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@{bidModel.bidStatus?Color.parseColor(`#ff3300`):Color.parseColor(`#00e600`)}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView10"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/biding_time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/tvBidingTime"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toBottomOf="@+id/textView10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/game_id"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_baseline_content_copy_24"
                    android:fontFamily="@font/poppins"
                    android:text="@{bidModel.gameId}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textIsSelectable="true"
                    app:layout_constraintBottom_toBottomOf="@+id/textView12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView12" />

                <TextView
                    android:id="@+id/tvRequestNewId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="request new Id"
                    android:textColor="@color/YellowColo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/game_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView20" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/contact_details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="@{bidModel.contactDetails==null?View.GONE:View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="@+id/textView14"
                    app:layout_constraintTop_toBottomOf="@+id/textView14" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/player_two"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="@{bidModel.gameName.equals(AppConstant.SIMPLE_JAKARTHA)?View.VISIBLE:View.GONE}"
                    app:layout_constraintStart_toStartOf="@+id/textView12"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@{bidModel.playerTwoUniqueId}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="@{bidModel.gameName.equals(AppConstant.SIMPLE_JAKARTHA)?View.VISIBLE:View.GONE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView20" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@{bidModel.gameName}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/textView14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView14"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@{bidModel.contactDetails}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="@{bidModel.contactDetails==null?View.GONE:View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView21"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView21"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@{bidModel.bidAmount}"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/resultLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView18">

                    <Button
                        android:id="@+id/btnWin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="Win"
                        app:backgroundTint="@android:color/holo_green_dark"
                        app:layout_constraintEnd_toStartOf="@+id/btnLoss"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView17" />

                    <Button
                        android:id="@+id/btnLoss"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Loss"
                        app:backgroundTint="@color/colorAccent"
                        app:layout_constraintBottom_toBottomOf="@+id/btnWin"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btnWin"
                        app:layout_constraintTop_toTopOf="@+id/btnWin" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" Update Game Result !!"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/resultLay"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView3"
                    tools:src="@tools:sample/avatars" />

                <Button
                    android:id="@+id/btnUploadResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Upload Result"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/resultLay" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Result Uploaded Successfully !!\nPlease wait shortly we will inform you"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/holo_green_dark"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView21" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@{bidModel.bidStatus?Color.parseColor(`#ff3300`):Color.parseColor(`#00e600`)}"
            android:text="@{bidModel.bidStatus?`Accepted`:`Accecpt`}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnRequestContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@{bidModel.contactDetails==null?Color.parseColor(`#00e600`):Color.parseColor(`#ff3300`)}"
            android:text="@{bidModel.contactDetails==null?`Share Contact Details`:`Shared Contact Details`}"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>